# MyCMakeNativeApplication

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/header/base/: BaseJni.h  ChildJni.h  ContainersTest.h  Initialize.h  SecondChildJni.h  ThreadPool.h  jni_helpers.h
app/src/main/cpp/src/: ChildJni.cpp  ContainersTest.cpp  Initialize.cpp  SecondChildJni.cpp  jni_helpers.cc
app/src/main/java/com/azx/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
